kuberneties/ingress/chronas-api-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chronas-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod  
spec:  
  tls:
  - hosts:
    - https-api.chronas.org
    secretName: https-api-crt
  rules:
  - host: https-api.chronas.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chronas-api-front-http
          servicePort: 80
